--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,6 +24,14 @@
       "options": {
         "cwd": "${workspaceFolder}/Invoices2/invoices2-approuter"
       }
+    },
+    {
+      "label": "Build invMock",
+      "type": "shell",
+      "command": "if [ ! -f ${workspaceFolder}/invMock/invmock-approuter/node_modules/@sap/html5-repo-mock/index.js ] || [ ! -f ${workspaceFolder}/invMock/invmock-approuter/node_modules/@sap/approuter/approuter.js ]; then npm i @sap/approuter && npm i @sap/html5-repo-mock; fi",
+      "options": {
+        "cwd": "${workspaceFolder}/invMock/invmock-approuter"
+      }
     }
   ]
 }
