Unidades de Test

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,6 +32,14 @@
       "options": {
         "cwd": "${workspaceFolder}/invMock/invmock-approuter"
       }
+    },
+    {
+      "label": "Build InvTest",
+      "type": "shell",
+      "command": "if [ ! -f ${workspaceFolder}/InvTest/invtest-approuter/node_modules/@sap/html5-repo-mock/index.js ] || [ ! -f ${workspaceFolder}/InvTest/invtest-approuter/node_modules/@sap/approuter/approuter.js ]; then npm i @sap/approuter && npm i @sap/html5-repo-mock; fi",
+      "options": {
+        "cwd": "${workspaceFolder}/InvTest/invtest-approuter"
+      }
     }
   ]
 }
