--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,26 +2,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Invoices-SAPUI5",
-      "type": "node",
-      "request": "launch",
-      "program": "${workspaceFolder}/Invoices/invoices-approuter/node_modules/@sap/html5-repo-mock/index.js",
-      "args": [
-        "--standalone",
-        "/logaligroupSAPUI5/index.html",
-        "--ui5",
-        "{\"version\":\".\"}"
-      ],
-      "cwd": "${workspaceFolder}/Invoices/SAPUI5",
-      "env": {
-        "PORT": "6004",
-        "MOCK_LOOKUP_DIRS": "[\"webapp\"]",
-        "run.config": "{\"handlerId\":\"ui5_run_config_handler_id\",\"runnableId\":\"/home/user/projects/Invoices/SAPUI5\"}"
-      },
-      "envFile": "${workspaceFolder}/Invoices/SAPUI5/.env1",
-      "preLaunchTask": "Build Invoices"
-    },
-    {
       "name": "Run invMock-SAPUI5",
       "type": "node",
       "request": "launch",
@@ -42,13 +22,13 @@
       "preLaunchTask": "Build invMock"
     },
     {
-      "name": "Run Invoices-SAPUI5",
+      "name": "Run Opa Integration Test Invoices-SAPUI5",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/Invoices/invoices-approuter/node_modules/@sap/html5-repo-mock/index.js",
       "args": [
         "--standalone",
-        "/logaligroupSAPUI5/test/mockServer.html",
+        "/logaligroupSAPUI5/test/integration/opaTests.qunit.html",
         "--ui5",
         "{\"version\":\".\"}"
       ],
@@ -58,7 +38,7 @@
         "MOCK_LOOKUP_DIRS": "[\"webapp\"]",
         "run.config": "{\"handlerId\":\"ui5_run_config_handler_id\",\"runnableId\":\"/home/user/projects/Invoices/SAPUI5\"}"
       },
-      "envFile": "${workspaceFolder}/Invoices/SAPUI5/.env5",
+      "envFile": "${workspaceFolder}/Invoices/SAPUI5/.env6",
       "preLaunchTask": "Build Invoices"
     }
   ]
